# tit

./: .gitignore  .titignore  Cargo.toml  test.tree
crates/cli/: Cargo.toml
crates/cli/src/: commit.rs  commits.rs  download.rs  exitcode.rs  init.rs  main.rs  remote.rs  upload.rs
crates/cli/src/command/: branch.rs  branches.rs  changes.rs  commit.rs  commits.rs  download.rs  init.rs  mod.rs  remote.rs  servers.rs  sync.rs  uninit.rs  upload.rs  version.rs
crates/cli/src/terminal/: checklist.rs
crates/core/: Cargo.toml
crates/core/src/: change.rs  change_kind.rs  commit.rs  error.rs  lib.rs  path.rs  repository.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/kern/: Cargo.toml
crates/kern/src/: branch.rs  change.rs  commit.rs  error.rs  hashtree.rs  ignore.rs  lib.rs  node.rs  repository.rs  repositorystate.rs  repositorytree.rs  tree.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  error.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  kinds.rs  lib.rs  macros.rs  main.rs  parser.rs  templater.rs  tree.rs
crates/parser/tests/: c_tests.rs
crates/server/: Cargo.toml
crates/server/src/: connection.rs  main.rs  repositorystorage.rs  server.rs
crates/templater/: Cargo.toml
crates/templater/src/: errors.rs  lib.rs  palceholder.rs  template.rs  templater.rs
lang/c/templates/: argument_list  assignment_expression  binary_expression  call_expression  declaration  else_clause  expression_statement  field_expression  for_statement  function_declarator  function_definition  if_statement  init_declarator  parameter_list  pointer_declarator  return_statement  sizeof_expression  string_literal  type_descriptor  update_expression  while_statement
(+17 files in other folders)
